--- a/css/controls.css
+++ b/css/controls.css
@@ -1,11 +1,11 @@
 .button {
-    background-color: var(--button-background);
-    text-decoration: none;
     display: inline-block;
-    padding: 5px 10px;
-    border-radius: 5px;
     border: 1px solid var(--border-color);
+    padding: 5px 10px;
+    background-color: var(--background-color);
+    text-decoration: none;
     color: var(--text-color);
+    border-radius: 5px;
 }
 
 .button:hover {
