--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: var(--background-color-dark);
+    background-color: var(--background-color);
     padding: 5px;
 }
 
@@ -8,7 +8,6 @@
     font-size: 3.5rem;
     font-weight: bold;
     text-align: center;
-    color: var(--text-color);
     text-transform: uppercase;
 }
 
@@ -17,32 +16,35 @@
     flex-direction: column;
 }
 
-.header__menu .menu__item {
+.menu__item {
     color: var(--text-color);
+    text-decoration: none;
 }
 
-.header__menu .menu__item:hover {
+.menu__item:hover {
     text-decoration: underline;
 }
 
 @media (min-width: 500px) {
+
     .header__nav {
         display: flex;
     }
+
     .header__menu {
         flex-direction: row;
-        flex: 1;
         align-items: center;
         justify-content: space-around;
+        flex: 1;
     }
 }
 
 .header__banner {
-    background: linear-gradient( rgba(0,0,0,0.3), rgba(0,0,0,0.3) ),
-                url(../img/baby-yoda.svg);
-    min-height: 500px;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+        url(../img/baby-yoda.svg);
     background-size: cover;
-    background-position: center;
+    background-position: 50% 50%;
+    min-height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -50,5 +52,5 @@
 }
 
 .header__title {
-    color: var(--accent-color);
+    color: var(--text-color-alternate);
 }
