--- a/css/products.css
+++ b/css/products.css
@@ -1,5 +1,8 @@
-.products__list {
+.products {
     padding: 5px;
+}
+
+.products__list {
     display: grid;
     gap: 5px;
 }
@@ -10,20 +13,25 @@
 }
 
 @media (min-width: 600px) {
+
     .products__list {
         grid-template-columns: 1fr 1fr;
     }
+
 }
 
-@media (min-width: 980px) {
+@media (min-width: 900px) {
+
     .products__list {
         grid-template-columns: 1fr 1fr 1fr;
     }
+
 }
 
 @media (min-width: 1200px) {
+
     .products__list {
         grid-template-columns: repeat(4, 1fr);
     }
-}
 
+}
